[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "physbo"
version = "3.0.0"
description = "optimization tool for PHYSics based on Bayesian Optimization"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MPL-2.0"
authors = [ { name = "PHYSBO developers", email = "physbo-dev@issp.u-tokyo.ac.jp" } ]

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
homepage = "https://www.pasums.issp.u-tokyo.ac.jp/physbo/en"
source = "https://github.com/issp-center-dev/PHYSBO"
documentation = "https://issp-center-dev.github.io/PHYSBO/"
releasenotes = "https://github.com/issp-center-dev/PHYSBO/releases"


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]

[tool.ruff.lint]
ignore = ["E741"]
