[metadata]
name = physbo
version = 0.3-dev
description = optimization tool for PHYSics based on Bayesian Optimization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/issp-center-dev/PHYSBO
license = GPLv3
author = PHYSBO developers
author_email = physbo-dev@issp.u-tokyo.ac.jp

[options]
packages = find:
zip_safe = False
python_requires= >=3.6
install_requires =
    numpy
    scipy
    six
